# AlphaPeel

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  Changelog.md  README.md  build_pipeline.sh  conftest.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: task-issue-template.md
.github/workflows/: publish.yml  tests.yml
docs/changelog/: 1.2.0-changelog.rst
docs/release/upcoming_changes/: README.rst
docs/source/: Usage.rst  algorithm.rst  changelog.rst  conf.py  contribute.rst  get_started.rst  index.rst  introduction.rst  release.rst  requirements.txt  usage.rst
docs/source/Usage/: file_formats.rst  program_options.rst
docs/source/release/: 1.2.0-notes.rst  154.new_feature.rst  README.rst  template.rst
example/: checkAccuracy.r  check_accuracy.R  check_accuracy.r  runScript.sh  run_examples.sh
example/simple_example/: simple_genotype.txt  simple_pedigree.txt
example/simple_example_x/: simple_genotype.txt  simple_pedigree.txt  simple_true.txt
src/: estRec-script.py  tinyPeel-script.py  tinyPeel.py
src/Peeling/: Peeling.py  PeelingIO.py
src/tinypeel/: estRec.py  tinypeel.py
src/tinypeel/Peeling/: Peeling.py  (+3 more)
tests/: checkResults.r  checkResultsFromSummary.r  runTests.sh
tests/TinyPeel/: runTests.sh
tests/accuracy_tests/: checkResults.r  extractSeg.r  runTests.sh  run_accu_test.py  simulation_parameters.txt  test_file.py
tests/baseData/: map.txt  segmap.txt
tests/functional_tests/: checkResults.r  runTests.sh  run_func_test.py  run_test.py
tests/speed_tests/: recombination_numba.py
(+254 files in other folders)
