[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "AlphaPeel"
version = "1.1.2"
authors = [
  { name="Andrew Whalen", email="awhalen@roslin.ed.ac.uk" },
]
description = "Multilocus and hybrid peeling"
# readme corresponds to the long_description
# "*.md" specifies the long_description_content_type
readme = "README.md"
license = {file = "MIT_License.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: MIT License',
]
# correspond to install_requires
dependencies = [
    "numpy>=1.19",
    "numba>=0.50.0"
]

[project.scripts]
# correspond to entry_points
AlphaPeel = "tinypeel.tinypeel:main"

[project.urls]
"Homepage" = "https://github.com/AlphaGenes/AlphaPeel"
"Bug Tracker" = "https://github.com/AlphaGenes/AlphaPeel/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["tinypeel", "tinypeel.tinyhouse", "tinypeel.Peeling"]
